tests/rustdoc-ui/doc-cfg.stderr
error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:3:1
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   | ^^^^^^^^^--^^^^^^^^^^^^^^^^^
   |          |
   |          expected a single argument here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc = "string"]
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc(hidden)]
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc(inline)]
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc(test)]
   |

error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:3:1
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   | ^^^^^^^^^^^^^^^^----------^^
   |                 |
   |                 expected a single argument here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc = "string"]
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc(hidden)]
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc(inline)]
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc(test)]
   |

error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:6:1
   |
LL | #[doc(cfg())]
   | ^^^^^^^^^--^^
   |          |
   |          expected a single argument here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[doc(cfg())]
LL + #[doc = "string"]
   |
LL - #[doc(cfg())]
LL + #[doc(hidden)]
   |
LL - #[doc(cfg())]
LL + #[doc(inline)]
   |
LL - #[doc(cfg())]
LL + #[doc(test)]
   |

error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:7:1
   |
LL | #[doc(cfg(foo, bar))]
   | ^^^^^^^^^----------^^
   |          |
   |          expected a single argument here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[doc(cfg(foo, bar))]
LL + #[doc = "string"]
   |
LL - #[doc(cfg(foo, bar))]
LL + #[doc(hidden)]
   |
LL - #[doc(cfg(foo, bar))]
LL + #[doc(inline)]
   |
LL - #[doc(cfg(foo, bar))]
LL + #[doc(test)]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:8:1
   |
LL | #[doc(auto_cfg(hide(foo::bar)))]
   | ^^^^^^^^^^^^^^^^^^^^--------^^^^
   |                     |
   |                     expected a valid identifier here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[doc(auto_cfg(hide(foo::bar)))]
LL + #[doc = "string"]
   |
LL - #[doc(auto_cfg(hide(foo::bar)))]
LL + #[doc(hidden)]
   |
LL - #[doc(auto_cfg(hide(foo::bar)))]
LL + #[doc(inline)]
   |
LL - #[doc(auto_cfg(hide(foo::bar)))]
LL + #[doc(test)]
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0539, E0805.
For more information about an error, try `rustc --explain E0539`.
